Fixed test case